compiler/tools/fpp-check/test/port_instance/undef_event.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_event.fpp:3.3
  event port eventOut
  ^
error: symbol Fw is not defined
note: looking for a port here
